--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@ LICENSE file in the root directory of this source tree.
 -->
 <html>
   <head>
-    <title>Messenger Demo</title>
+    <title>EndoBot</title>
   </head>
   <body>
     <script>
